<resources>
    <string name="app_name">Long Kong</string>
    <string name="account_type">org.cryse.lkong</string>
    <string name="activity_title_post_list">View Thread</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_dark_theme">Dark Theme</string>
    <string name="action_light_theme">Light Theme</string>
    <string name="action_thread_goto_floor">Goto floor</string>
    <string name="action_thread_add_favorite">Add Favorite</string>
    <string name="action_thread_remove_favorite">Remove Favorite</string>
    <string name="action_insert_image">Insert Image</string>
    <string name="action_insert_emoji">Insert Emoji</string>
    <string name="action_send_post">Send</string>
    <string name="action_open_notification">Notifications</string>
    <string name="action_open_search">Search</string>
    <string name="action_clear_browse_history">Clear Browse History</string>
    <string name="action_punch">Punch</string>
    <string name="action_follow_forum">Follow</string>
    <string name="action_unfollow_forum">Unfollow</string>
    <string name="action_forum_followed">Followed</string>
    <string name="action_forum_not_followed">Not followed</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_open_in_browser">Open In Browser</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_user_profile">View Profile</string>
    <string name="action_user_profile_follow">Follow</string>
    <string name="action_user_profile_unfollow">Unfollow</string>
    <string name="action_user_profile_pm">PM</string>
    <string name="action_user_profile_block">Block</string>
    <string name="action_user_profile_unblock">Unblock</string>
    <string name="action_share">Share</string>
    <string name="action_save_image">Save Image</string>
    <string name="drawer_item_notification">Notification</string>
    <string name="drawer_item_forum_list">Forums</string>
    <string name="drawer_item_hot_thread">Hot</string>
    <string name="drawer_item_digest_thread">Digest</string>
    <string name="drawer_item_favorites">Favorites</string>
    <string name="drawer_item_browse_history">Browse History</string>
    <string name="drawer_item_timeline">Timeline</string>
    <string name="drawer_item_followed_forums">Followed Forums</string>
    <string name="drawer_item_homepage">Home Page</string>
    <string name="drawer_item_mentions">Mention</string>
    <string name="drawer_item_notice">Notice</string>
    <string name="drawer_item_notice_rate">Rate</string>
    <string name="drawer_item_private_messages">PM</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_faq">FAQ</string>
    <string name="drawer_item_account_add">Add Account</string>
    <string name="drawer_item_manage_account">Manage Account</string>
    <string name="drawer_item_theme_settings">Theme Settings</string>
    <string name="hint_account_email">Your Email</string>
    <string name="hint_account_password">Password</string>
    <string name="hint_title">Title</string>
    <string name="hint_content">Content</string>
    <string name="hint_goto_floor">Floor Number</string>
    <string name="hint_rate_reason">Reason</string>
    <string name="hint_rate_score">Score</string>
    <string name="hint_url_name">Url Text</string>
    <string name="hint_url_value">Url</string>
    <string name="hint_search_label">Search</string>
    <string name="hint_search_hint">Search forums, threads or people</string>
    <string name="format_account_threads_posts_summary">Threads: %1$d \t\t Posts: %2$d </string>
    <string name="format_forum_item_summary">%1$s Threads · %2$s Posts today</string>
    <string name="format_unit_kilo">k</string>
    <string name="format_unit_ten_kilo">0k</string>
    <string name="format_forum_item_todayposts">Today: %1$d</string>
    <string name="format_forum_item_threads_count">Threads: %1$d</string>
    <string name="format_post_ordinal">#%1$d</string>
    <string name="format_post_list_page_indicator">%1$d / %2$d</string>
    <string name="format_post_reply_title">Reply: %1$s</string>
    <string name="format_timeline_reply_to_reply">\@%1$s replies in %2$s</string>
    <string name="format_timeline_create_thread">New Thread: %1$s</string>
    <string name="format_timeline_reply_to_thread">\@%1$s create a new thread:</string>
    <string name="format_note_rate_log_prefix">Your post&#160;</string>
    <string name="format_note_rate_log_middle">&#160;is rated by %1$s:&#160;</string>
    <string name="format_note_rate_log_suffix">&#160;%1$s %2$s</string>
    <string name="format_search_post_result_reply_count">%1$s \t\t\t %2$d&#160; Replies</string>
    <string name="format_punchday_count">Punched %1$d days</string>
    <string name="format_digests_by">Digests by %1$s</string>
    <string name="format_all_activities_of">All activities of %1$s</string>
    <string name="format_followers_of">Followers of %1$s</string>
    <string name="format_following_of">%1$s is following</string>
    <string name="format_threads_by">Threads by %1$s</string>
    <string name="format_time_just_now">just now</string>
    <string name="format_time_a_minute_ago">a minute ago</string>
    <string name="format_time_n_minutes_ago">&#160;minutes ago</string>
    <string name="format_time_an_hour_ago">an hour ago</string>
    <string name="format_time_n_hours_ago">&#160;hours ago</string>
    <string name="format_time_yesterday">yesterday</string>
    <string name="format_time_n_days_ago">&#160;days ago</string>
    <string name="format_time_date">MMM dd, yyyy</string>
    <string name="format_time_time">HH:mm</string>
    <string name="format_notice_mentions">%1$d Mentions</string>
    <string name="format_notice_notice">%1$d Notices</string>
    <string name="format_notice_private_message">%1$d PM</string>
    <string name="format_notice_rate">%1$d Rates</string>
    <string name="format_notice_all_count">You Have %1$d New Notices</string>
    <string name="format_share_title">[ %1$s ]</string>
    <string name="format_post_tail_prefix">&#160;——&#160;</string>
    <string name="format_post_list_page_indicator_detail">Page %1$d (%2$d - %3$d)</string>
    <string name="format_post_header_detail_count">%1$d Views · %2$d Replies</string>
    <string name="toast_success_save_image_as">Image saved to: /sdcard/Pictures/%1$s/%2$s</string>
    <string name="toast_failure_signin">Sign in failed, please check your email, password and network connection.</string>
    <string name="toast_failure_get_user_info">Failed to get user info.</string>
    <string name="toast_failure_get_forum_list">Failed to refresh forum list.</string>
    <string name="toast_failure_rate_post">Failed to rate post.</string>
    <string name="toast_failure_save_image_as">Failed to save image.</string>
    <string name="toast_failure_new_post">Failed to send data, please try again.</string>
    <string name="toast_double_tap_to_exit">Tap BACK again to exit.</string>
    <string name="toast_error_title_empty">Title should not be empty.</string>
    <string name="toast_error_content_empty">Content should not be empty.</string>
    <string name="toast_error_invalid_floor">No such floor.</string>
    <string name="toast_error_rate_self">You cannot rate to your own post.</string>
    <string name="toast_error_rate_score_empty">Score could not be empty.</string>
    <string name="toast_error_url_empty">Url name or value could not be empty.</string>
    <string name="toast_error_link_to_current_thread">This link is point to current thread.</string>
    <string name="toast_error_open_origin_image">Failed to load this image.</string>
    <string name="toast_error_open_thread_failed">Failed to load this thread.</string>
    <string name="toast_sign_in_success">Sign in successfully.</string>
    <string name="button_reply">Reply</string>
    <string name="button_share">Share</string>
    <string name="button_rate">Rate</string>
    <string name="button_edit">Edit</string>
    <string name="settings_category_dispaly_title">Display</string>
    <string name="settings_category_other_title">Other</string>
    <string name="settings_category_forum_title">Forum</string>
    <string name="settings_category_notification">Notification</string>
    <string name="settings_item_about_title">About</string>
    <string name="settings_item_image_download_policy_title">Image download policy</string>
    <string name="settings_item_avatar_download_policy_title">Avatar download policy</string>
    <string name="settings_item_post_extra_tail_text_title">Post tail text</string>
    <string name="settings_item_post_extra_tail_text_summary">Set tail for your every post</string>
    <string name="settings_item_post_extra_tail_text_default">LKongDroid App</string>
    <string name="settings_category_author_title">About author</string>
    <string name="settings_item_author_name_value">Cryse Hillmes</string>
    <string name="settings_item_author_name_title">Author</string>
    <string name="settings_item_email_address_value">tyk5555@hotmail.com</string>
    <string name="settings_item_email_address_title">Author Email</string>
    <string name="settings_item_author_blog_site_value">https://blog.cryse.org</string>
    <string name="settings_item_author_blog_site">Website</string>
    <string name="settings_item_theme_color_title">Theme</string>
    <string name="settings_item_theme_color_summary">Choose your theme</string>
    <string name="settings_item_change_log_title">Changelog</string>
    <string name="settings_item_change_log_summary">Changelog of recent versions</string>
    <string name="settings_item_feedback_value">Any suggestion and feedback is acceptable</string>
    <string name="settings_item_feedback_title">Feedback</string>
    <string name="settings_item_version">Version</string>
    <string name="settings_category_navigation">Navigation</string>
    <string name="settings_item_use_in_app_browser_title">In-App Browser on Links</string>
    <string name="settings_item_use_in_app_browser_summary">Use in-app browser instead of jumping to browser app</string>
    <string name="settings_item_use_forums_first_title">Forums page first</string>
    <string name="settings_item_use_forums_first_summary">Use forum list as first page(Requires restart app)</string>
    <string name="settings_item_timeline_only_thread_title">Only thread in Timeline</string>
    <string name="settings_item_timeline_only_thread_summary">Only show thread in timeline</string>
    <string name="settings_item_forum_list_grid_title">Show forum list in grid</string>
    <string name="settings_item_forum_list_grid_summary">Show forum list in grid (without detail, require restart app).</string>
    <string name="settings_item_scroll_by_volume_key_title">Volume rocker scrolling</string>
    <string name="settings_item_scroll_by_volume_key_summary">Enable scrolling with the volume buttons</string>
    <string name="settings_item_enable_background_notification_title">Enable Notification</string>
    <string name="settings_item_enable_background_notification_summary">Enable this if want to receive notifications</string>
    <string name="settings_item_check_notification_duration_title">Check Duration</string>
    <string name="settings_item_check_notification_duration_summary">Check new message periodically</string>
    <string name="settings_item_account_settings_title">Accounts</string>
    <string name="settings_item_account_settings_summany">Account settings</string>
    <string name="donation_title">Donate</string>
    <string name="settings_item_screen_rotation_title">Screen Rotation</string>
    <string name="settings_item_screen_rotation_summary">Configure app screen rotation here</string>
</resources>