<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_open_search" android:icon="@drawable/ic_action_search" android:title="@string/action_open_search" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_open_notification" android:icon="@drawable/ic_action_notification" android:title="@string/action_open_notification" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_punch" android:icon="@drawable/ic_action_punch" android:title="@string/action_punch" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_change_theme" android:title="@string/action_dark_theme" app:showAsAction="never" />
    <item android:id="@+id/action_sign_out" android:title="@string/action_sign_out" app:showAsAction="never" />

</menu>