<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_thread_goto_floor"
        android:icon="@drawable/ic_action_goto_floor"
        android:title="@string/action_thread_goto_floor"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_thread_favorite"
        android:icon="@drawable/ic_action_favorite_outline"
        android:title="@string/action_thread_add_favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share_thread"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_change_theme"
        android:title="@string/action_dark_theme"
        app:showAsAction="never" />
</menu>