<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recyclerview_item_post_cardview_root_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/default_card_radius"
    app:cardElevation="@dimen/default_card_elevation"
    app:cardUseCompatPadding="true"
    app:contentPadding="0dp"
    tools:layout_height="120dp">

    <org.cryse.lkong.widget.PostItemView
        android:id="@+id/recyclerview_item_post_view_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/recyclerview_item_post_imageview_avatar"
        android:layout_width="@dimen/size_avatar_default"
        android:layout_height="@dimen/size_avatar_default"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"/>

    <ImageButton
        android:id="@+id/recyclerview_item_post_button_rate"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="start|bottom"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_button_rate"
        android:contentDescription="@string/button_share"
        android:background="?selectableItemBackground"
        android:tag="tint|primary_text"/>

    <TextView
        android:id="@+id/recyclerview_item_post_textview_rate"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:minWidth="48dp"
        android:layout_gravity="start|bottom"
        android:layout_marginLeft="68dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:background="?selectableItemBackground"
        />


    <ImageButton
        android:id="@+id/recyclerview_item_post_button_replay"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_button_comment"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/button_reply"
        android:background="?selectableItemBackground"
        android:tag="tint|primary_text" />

    <ImageButton
        android:id="@+id/recyclerview_item_post_button_share"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="68dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_action_share"
        android:contentDescription="@string/button_share"
        android:background="?selectableItemBackground"
        android:tag="tint|primary_text"/>

    <ImageButton
        android:id="@+id/recyclerview_item_post_button_edit"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="end|bottom"
        android:layout_marginRight="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_button_edit"
        android:contentDescription="@string/button_edit"
        android:visibility="invisible"
        android:background="?selectableItemBackground"
        android:tag="tint|primary_text"/>
</FrameLayout>